Several bugfixes
- Fixed clearing notifications in some situations
- Now opens websites right away if setting clipboard of a URL
- Fixed long device names overlapping

--- a/v2/device/devices.css
+++ b/v2/device/devices.css
@@ -36,6 +36,7 @@
 .devicename{    
     font-size: small;
     font-weight: bold;
+    word-break: break-all;
 }
 
 .devicelocalnetwork{
